# seven-agent

./: README.md  plot_github_stats.py
seven-agent-custom/: main.py
seven-agent-frontend/: package-lock.json  package.json
seven-agent-frontend/src/: App.tsx  index.css
seven-agent-frontend/src/components/: Chat.css  Chat.tsx
seven-agent-server/: .gitignore  Cargo.toml
seven-agent-server/migrations/: 20240507_create_users_table.sql
seven-agent-server/src/: config.rs  errors.rs  main.rs  routes.rs
seven-agent-server/src/models/: user.rs
seven-agent-server/src/services/: auth.rs
