[package]
name = "seven_agent"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rocket web API service with authentication"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "macros"], default-features = false }
jsonwebtoken = "9.2"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
dotenv = "0.15"
utoipa = { version = "4.1", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["rocket"] }
thiserror = "1.0"
anyhow = "1.0"

[features]
default = []
